--- a/ContosoPizza/Pages/Index.cshtml
+++ b/ContosoPizza/Pages/Index.cshtml
@@ -17,7 +17,7 @@
     <h2 style="color: #FF5733;">Our most popular pizzas</h2>
     <br />
     <div class="row">
-        <div class="col-sm-4f" style="padding: 0 10px;">
+        <div class="col-sm-4" style="padding: 0 10px;">
             <h3 style="color: #333;">Cheese Pizza</h3>
             <p style="font-size: 1rem; color: #555;">This is our most popular pizza, made with fresh mozzarella cheese, pepperoni, and sausage.</p>
         </div>
